2010-06-14  Mike Frysinger  <vapier@gentoo.org>

  * configure.ac: Drop stropts.h check since parport code no longer uses it.

2010-05-19  Arnim Laeuger  <arniml>

  * src/flash/amd.c, doc/UrJTAG.txt: [ 2996919 ] Support for MX29LV320C

2010-05-05  Mike Frysinger  <vapier@gentoo.org>

  * src/cmd/cmd_debug.c (string_to_log_level): Tweak the -1 sanity check to
    avoid warnings from gcc about -1 not being an enum value.

2010-02-16  Mike Frysinger  <vapier@gentoo.org>

  * data/MANUFACTURERS: Use the official ADI name.

  * doc/UrJTAG.txt: Document the misc files under data/.

  * src/bfin/bfin-part-bfin.c (bfin_part_init): Add a few more checks to avoid
    segfaults and change the asserts to log warnings.

2010-02-10  Jie Zhang  <jie.zhang@analog.com>

  * src/bsdl/Makefile.am (vhdl_flex.$(OBJEXT), bsdl_flex.$(OBJEXT)):
    Add prefix libbsdl_flex_la-.  Depend on vhdl_bison.h and
    bsdl_bison.h instead of vhdl_bison.$(OBJEXT) and
    bsdl_bison.$(OBJEXT).
    (bsdl_bison.$(OBJEXT)): Depend bsdl_bison.h.
  * src/svf/Makefile.am (svf_flex.$(OBJEXT)): Add prefix
    libsvf_flex_la-.  Depend on svf_bison.h instead of
    svf_bison.$(OBJEXT).

2010-02-10  Jie Zhang  <jie.zhang@analog.com>

  * src/tap/usbconn/libftdx.h (URJ_USBCONN_FTDI_MAXRECV): Define
    to be (63 * 64) if HAVE_LIBFTDI_ASYNC_MODE defined.
  * src/tap/usbconn/libftdi.c (usbconn_ftdi_flush): Use async
    mode libftdi if HAVE_LIBFTDI_ASYNC_MODE defined.
  * configure.ac: Check libusb-1.0 and libftdi async mode.

2010-02-09  Mike Frysinger  <vapier@gentoo.org>

  * src/urjtag.pc.in: Include -Llibdir in default output and let pkg-config
    worry about filtering it properly.

2010-02-08  Mike Frysinger  <vapier@gentoo.org>

  * include/urjtag/cable.h (urj_tap_cable_usb_probe): New prototype.
  * src/tap/cable/generic_usbconn.c (urj_tap_cable_usb_probe): New function
    to autodetect USB cables.
  * src/cmd/cmd_cable.c (cmd_cable_run): Add a new "probe" driver to call each