@@ -136,7 +136,10 @@ int sa_flags = SA_ONESHOT;
 
 AC_CHECK_HEADERS([linux/ppdev.h], [HAVE_LINUX_PPDEV_H="yes"])
 AC_CHECK_HEADERS([dev/ppbus/ppi.h], [HAVE_DEV_PPBUS_PPI_H="yes"])
-AC_CHECK_HEADERS(wchar.h)
+AC_CHECK_HEADERS(m4_flatten([
+	wchar.h
+	sys/wait.h
+]))
 
 VL_LIB_READLINE
 
